create signup component

--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -5,11 +5,11 @@
       <form>
         <div class="form-control">
           <label class="label">
-            <span class="label-text">Email</span>
+            <span class="label-text">Username</span>
           </label>
           <input
-            type="email"
-            placeholder="Enter your email"
+            type="text"
+            placeholder="Enter your username"
             class="input input-bordered w-full"
             required
           />
@@ -30,7 +30,8 @@
         </div>
       </form>
       <p class="text-center mt-4 text-sm text-gray-600">
-        Don't have an account? <a href="#" class="text-primary">Sign up</a>
+        Don't have an account?
+        <a routerLink="/signup" class="text-primary">Sign up</a>
       </p>
     </div>
   </div>
